# Python-basic

./: README.md  requirements-dev.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/fastapi_ping_app/: main.py
homework_03/fastapi_ping_app/views/: pinger.py
homework_04/: jsonplaceholder_requests.py  main.py  requirements.txt
homework_04/models/: __init__.py  db.py  post.py  user.py
homework_05/: app.py
homework_05/templates/: base.html
homework_05/templates/about/: about.html
homework_05/templates/navbar/: navbar.html
homework_05/views/about/: about.py
homework_06/: docker-compose.yml  requirements.txt
homework_06/src/: app.py  config.py
homework_06/src/forms/: forms.py
homework_06/src/models/: base.py  db.py  purchase.py  user.py
homework_06/src/templates/: base.html
homework_06/src/templates/navbar/: navbar.html
homework_06/src/templates/purchases/: add.html  back-to-purchases-list.html  details.html  list.html
homework_06/src/templates/users/: add.html  back-to-users-list.html  details.html  list.html
homework_06/src/views/index/: __init__.py  index.py
homework_06/src/views/purchases/: crud.py  purchases_views.py
homework_06/src/views/users/: __init__.py  crud.py  users_views.py
