[tool.poetry]
name = "docker container with web app"
version = "0.1.0"
description = ""
authors = ["Evseev Artyom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
